 - temp deactivated regex lib compilation as there still are some issues with dependencies
 
[GAME]
chars.h	: Added SetActiveChannels method
          Regrouped some method declarations by theme
decoder/udp_chat.h/.cpp : added PUdpChatChannels class for custom channel info decoding

[PATCH]
Minor change in client connection message, same as what has been done for infoserver.

====================
Hammag; 11.12.2006 20:10 GMT+1
----------
[rev. 41]

<General changes>
 - added @version command
 - added directory src/tools for compile tools and corresponding makefile
 - dependency files issues should hopefully be solved now once for all
 
[GAME]
commands.cpp: added @version command

[PATCH]
Minor change in client connection message, same as what has been done for infoserver.

[All Servers]
Added src/include/svnrevision.h (automatically updated)
Removed inclusion of version.h for everywhere, and added it to each global.cpp
Added ServerVersion and SVNRevision as global strings (globals.h) for each server
Modified accordingly version display at server start in global.cpp

[LIBS]
misc.h/.cpp: Commented out GetSVNRev() that is not used anymore

[TOOLS]
 - added src/tools/cleandepfile.c
   cleandepfile is used to clean dependency files generated by g++
 - added src/tools/setsvnrev script to update the new src/include/svnrevision.h
   when needed
 - updated src/Makefile and src/Rules.make accordingly
   No manual action should be needed to manage svn revision number inclusion in source
   Game/Info/Patch servers version can still be set in version.h

====================
Namikon; 11.12.2006 21:46 GMT+1
----------
[rev. 42]

<General changes>
- Fixed (hopefully) customchannels. They're not loaded / saved from/to SQL yet, but you should be able to enable/disable them.
  uppon entry, all channels are disabled.

Hopefully, because i cant verify it. (No time to compile and try it). Will verify (and debug) it in the next few days